<resources>
    <string name="app_name">ProjectHider</string>
    <string name="pathtofile">Path to file</string>
    <string name="newname">New name of file</string>
    <string name="fromsd">From SD to internal storage</string>
    <string name="frominternal">From internal storage to SD</string>
    <string name="delete">Delete from internal storage</string>
    <string name="wtsd">File has written to SD:</string>
    <string name="wti">File has written to internal storage:</string>
    <string name="hbd">File has been deleted from internal storage</string>
    <string name="error">Error while reading/writing file:</string>
    <string name="pickfile">Pick file</string>
    <string name="settings">Settings</string>
    <string name="main_tab">Main tab</string>
</resources>
